--- a/PagBio.html
+++ b/PagBio.html
@@ -48,8 +48,110 @@
 </div>
 <div class="skew-c"></div>
 <div class="colour-block">
-  <h1 class="titolo">Skewed Clockwise.</h1>
-  <p class="paragrafo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  <h1 class="titolo">school hours</h1>
+  <center>
+  <table class="tabella">
+    
+    <tr>
+      <th>disciplines</th>
+      <th>3°</th>
+      <th>4°</th>
+      <th>5°</th>
+
+    </tr>
+    <tr>
+      <td class="materie">Italian</td>
+      <td class="ore">Maria Anders</td>
+      <td class="ore">Germany</td>
+      <td class="ore">Germany</td>
+
+    </tr>
+    <tr>
+      <td class="materie">English</td>
+      <td class="ore">Francisco Chang</td>
+      <td class="ore">Mexico</td>
+      <td class="ore">Germany</td>
+
+    </tr>
+    <tr>
+      <td class="materie">Story</td>
+      <td class="ore">Roland Mendel</td>
+      <td class="ore">Austria</td>
+      <td class="ore">Germany</td>
+
+    </tr>
+    <tr>
+      <td class="materie">Math</td>
+      <td class="ore">Helen Bennett</td>
+      <td class="ore">UK</td>
+      <td class="ore">Germany</td>
+
+    </tr>
+    <tr>
+      <td class="materie">math complements</td>
+      <td class="ore">Yoshi Tannamuri</td>
+      <td class="ore">Canada</td>
+      <td class="ore">Germany</td>
+
+    </tr>
+    <tr>
+      <td class="materie">health legislation</td>
+      <td class="ore">Giovanni Rovelli</td>
+      <td class="ore">Italy</td>
+      <td class="ore">Germany</td>
+
+    </tr>
+    <tr>
+        <td class="materie">analytical chemistry</td>
+        <td class="ore">Maria Anders</td>
+        <td class="ore">Germany</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+      <tr>
+        <td class="materie">organic chemistry</td>
+        <td class="ore">Francisco Chang</td>
+        <td class="ore">Mexico</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+      <tr>
+        <td class="materie">Ebiology, microbiology</td>
+        <td class="ore">Roland Mendel</td>
+        <td class="ore">Austria</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+      <tr>
+        <td class="materie">hygiene, anatomy, pathology</td>
+        <td class="ore">Helen Bennett</td>
+        <td class="ore">UK</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+      <tr>
+        <td class="materie">physical education</td>
+        <td class="ore">Yoshi Tannamuri</td>
+        <td class="ore">Canada</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+      <tr>
+        <td class="materie">catholic religion</td>
+        <td class="ore">Giovanni Rovelli</td>
+        <td class="ore">Italy</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+      <tr>
+        <td class="materie">total hours</td>
+        <td class="ore">Giovanni Rovelli</td>
+        <td class="ore">Italy</td>
+        <td class="ore">Germany</td>
+  
+      </tr>
+  </table>
+</center>
 </div>
 
 
