--- a/PagBio.html
+++ b/PagBio.html
@@ -147,7 +147,7 @@
         <td class="materie">total hours</td>
         <td class="ore">Giovanni Rovelli</td>
         <td class="ore">Italy</td>
-        <td class="ore">Germany</td>
+        <td >Germany</td>
   
       </tr>
   </table>
