--- a/PagBio.html
+++ b/PagBio.html
@@ -62,7 +62,7 @@
             
             
             <div class="footer-col">
-                <h4>Sontacts</h4>
+                <h4>Contacts</h4>
                 <ul>
                     <li><a href="#">Via F. Baracca, 80</a></li>
                     <li><a href="#">10095 Grugliasco</a></li>
@@ -73,9 +73,9 @@
             <div class="footer-col">
                 <h4>Follow us on</h4>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/itimajo/?locale=it_IT"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.youtube.com/@itismajo"><i class="fa fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/iti.majorana/?theme=dark"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </div>
