--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2 id="majoscritta"> I.T.I. Ettore Majorana</h2>
       </header>
 <center>
-        <div class="container " style="margin-top: -100px;">
+        <div class=" " style="margin-top: -100px;">
           <!-- Carousel -->
           <div id="demo" class="carousel slide pippo" data-bs-ride="carousel"  style="margin-bottom: 10px; padding: 0.5px; width: 800px;" >
 
