--- a/PagBio.html
+++ b/PagBio.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="style2.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -32,13 +32,49 @@
             }
         }
       </script>
-    
+      <!--inizio carousel-->
+    <!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <img src="img/ITI Majorana Lab Biotecnologie (2).jpg" style="width:100%">
+      <div class="text">Caption Text</div>
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="img/ITI Majorana Lab Chimica (2).jpg" style="width:100%">
+      <div class="text">Caption Two</div>
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="img/.jpg" style="width:100%">
+      <div class="text">Caption Three</div>
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+  <!--fine carousel-->
+      
     <link href='https://fonts.googleapis.com/css?family=Wire+One|Raleway:300' rel='stylesheet' type='text/css'>
 
 <div class="skew-c"></div>
 <div class="colour-block">
   <h1 class="titolo">Biotechnology</h1>
   <p class="paragrafo">The Chemistry, Materials and Biotechnology course is designed for students interested in science subjects, technologies and their evolution in chemistry and biotechnology.</p>
+  <img src="" alt="" style="width: 300px;">
 </div>
 <div class="skew-cc"></div>
 <div class="white-block"><!--BIOTECNOLOGIE-->
