--- a/PagBio.html
+++ b/PagBio.html
@@ -38,6 +38,7 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
       <img src="img/ITI Majorana Lab Biotecnologie (2).jpg" style="width:100%">
       <div class="text">Caption Text</div>
     </div>
@@ -50,7 +51,7 @@
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="img/.jpg" style="width:100%">
+      <img src="img3.jpg" style="width:100%">
       <div class="text">Caption Three</div>
     </div>
   
