--- a/PagBio.html
+++ b/PagBio.html
@@ -36,7 +36,7 @@
       <div class="slideshow-container">
 
         <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
+          <div class="numbertext"></div>
           <img src="img/ITI Majorana Lab Biotecnologie (2).jpg" style="width:100%">
           <div class="text">Caption Text</div>
         </div>
