--- a/PagBio.html
+++ b/PagBio.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="topnav" id="myTopnav" style="text-align: center;">
-        <a href="#home" class="active link">Home</a>
+        <a href="index.html" class="active link">Home</a>
         <a href="#news" class="active link">News</a>
         <a href="#contact" class="active link">Contact</a>
         <a href="#about" class="active link">About</a>
