--- a/PagBio.html
+++ b/PagBio.html
@@ -12,9 +12,9 @@
 
     <div class="topnav" id="myTopnav" style="text-align: center;">
         <a href="index.html" class="active link">Home</a>
-        <a href="#news" class="active link">News</a>
-        <a href="#contact" class="active link">Contact</a>
-        <a href="#about" class="active link">About</a>
+        <a href="PagBio.html" class="active link">Biotechnology</a>
+        <a href="PagInfo.html" class="active link">Informatics</a>
+        <a href="PagElettrico.html" class="active link">Telecommunications</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -113,7 +113,7 @@
             <div class="footer-col">
                 <h4>Contacts</h4>
                 <ul>
-                    <li><a href="#">Via F. Baracca, 80</a></li>
+                    <li><a href="https://maps.app.goo.gl/BQDcTMEXFiXTrb8NA">Via F. Baracca, 80</a></li>
                     <li><a href="#">10095 Grugliasco</a></li>
                     <li><a href="#">Torino - Italy</a></li>
                     <li><a href="#">Tel. +39 011 411.33.34</a></li>
