--- a/index.html
+++ b/index.html
@@ -45,22 +45,31 @@
 
 <div class="skew-c"></div>
 <div class="colour-block">
-  <h1 class="titolo">Biotechnology</h1>
-  <p class="paragrafo">The expert in Chemistry, Materials and Health Biotechnology has specific skills in chemistry, biology, health care and pharmaceuticals. He or she is able to integrate skills in chemistry, biology and microbiology, chemical and biotechnological plants and processes, and industrial organization and automation to contribute to process innovation, collaborate in the management of analytical laboratory instrumentation.</p>
-  <img src="" alt="" style="width: 300px;">
+  <h1 class="titolo">I.T.I. Majorana</h1>
+  <p class="paragrafo">The I.T.I. E. Majorana has been operating since 1976 at its Grugliasco location training industrial experts in computer science, </p>
+  <p class="paragrafo">electronics and in telecommunications, sectors in which significant opportunities are observed for young people both to look for a first occupation and for the continuation of their studies.</p>
+
 </div>
 <div class="skew-cc"></div>
-<div class="white-block"><!--BIOTECNOLOGIE-->
-  <h1 class="titolo">Sanitary</h1>
-  <p class="paragrafo">The expert in Chemistry, Materials and Health Biotechnology has specific skills in the chemical, biological, health and pharmaceutical fields. 
-    He/she has skills related to the use of major health technologies in the biomedical, pharmaceutical and food fields and contributes to the promotion of personal and collective health.</p>
+<div class="white-block">
+  <h1 class="titolo">Graduation</h1>
+  <p class="paragrafo">The full cycle lasts five years and allows for the attainment of the Technical Education Diploma 
+    with which one can immediately enter the world of work or continue studies in all faculties 
+    University and at the Polytechnic.</p>
+    <p class="paragrafo">At the end of the fourth class (for a duration of 4-5 weeks) and during the fifth class, the following is offered 
+        students the opportunity to take advantage of an internship period in companies in the electronics, computer and telecommunications industries, in order to more consciously orient their future choices. 
+        and telecommunications, in order to more consciously orient their future choices.</p>
+    </p>
 </div>
 <div class="skew-c"></div>
 <div class="colour-block">
-  <h1 class="titolo">Job outlets</h1>
+  <h1 class="titolo">Educational offerings</h1>
 
-    <p class="paragrafo">Became a biotechnologist has skills related to the use of major health technologies in the biomedical, pharmaceutical, and food fields and contributes to the promotion of personal and collective health.
-        Finds employment in private and public laboratories and facilities in the chemical, pharmaceutical, cosmetic, and health care sectors.</p>
+    <p class="paragrafo">Ettore Majorana Industrial Technical Institute trains industrial technical experts in the fields of "Computer Science and 
+        Telecommunications," "Electronics and Electrical Engineering," and "Chemistry, Materials and Biotechnology," preparing them to enter 
+        quickly in technologically advanced production realities or to successfully pursue university studies. The addresses 
+        of study, updated by the high school reform, operate in the field of new technologies and are expanded by courses 
+        and activities that further specialize students in emerging issues.</p>
     <ul>
         
 </div>
@@ -79,7 +88,7 @@
             <div class="footer-col">
                 <h4>Contacts</h4>
                 <ul>
-                    <li><a href="#">Via F. Baracca, 80</a></li>
+                    <li><a href="https://maps.app.goo.gl/BQDcTMEXFiXTrb8NA">Via F. Baracca, 80</a></li>
                     <li><a href="#">10095 Grugliasco</a></li>
                     <li><a href="#">Torino - Italy</a></li>
                     <li><a href="#">Tel. +39 011 411.33.34</a></li>
