--- a/PagInfo.html
+++ b/PagInfo.html
@@ -84,7 +84,7 @@
 
 <div class="skew-c"></div>
 <div class="colour-block">
-  <h1 class="titolo">informatic and telecommunications</h1>
+  <h1 class="titolo">Informatic and Telecommunications</h1>
   <p class="paragrafo">The address in Computer Science and Telecommunications is for students who wish to acquire skills in computer systems, information processing, networks and communication equipment.
     The address includes two articulations, "Computer Science" and "Telecommunications."</p>
   <img src="" alt="" style="width: 300px;">
@@ -97,7 +97,7 @@
 </div>
 <div class="skew-c"></div>
 <div class="colour-block">
-  <h1 class="titolo">telecommunications</h1>
+  <h1 class="titolo">Telecommunications</h1>
 
     <p class="paragrafo">The expert in Computer Science with Telecommunications articulation operates and collaborates in the analysis, design, installation, configuration and maintenance of telecommunications networks, local and geographic, characterized by fixed and mobile infrastructure, particularly for hardware issues; applies knowledge of transmission media, protocols and devices for communication to define the use according to the appropriate topology and the requirements expressed by users.
         Finds employment in network installation and support companies, fixed and mobile telephone companies, and pointing system (gps) design and construction companies.</p>
